# aoc21

./: .gitignore
cpp/: CMakeLists.txt
cpp/src/: day01.cpp  day02.cpp
data/: 17.txt  s16_2.txt
hs/: aoc.cabal  aoc21.cabal  flake.nix  hie.yaml  package.yaml
hs/app/: Main.hs
hs/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day20.hs  Day21.hs  Day22.hs
hs/test/: Spec.hs
