cabal-version:      3.0
name:               aoc21
version:            0.1.0.0

synopsis: advent of code 2021

description: advent of code 2021, haskell edition

license:            Apache-2.0
license-file:       LICENSE
author:             Thomas Peiselt
maintainer:         pi@kulturguerilla.org

extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day20
        Day21
        Day22

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions:
        RecordWildCards FlexibleContexts LambdaCase TupleSections

    build-depends:
        base ^>=4.14.3.0,
        parsec ^>=3.1.14.0,
        extra ^>=1.7.9,
        containers ^>=0.6.5.1,
        MemoTrie ^>=0.6.10,
        vector ^>=0.12.3.1

    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc21
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions:
        RecordWildCards FlexibleContexts LambdaCase TupleSections

    build-depends:
        base ^>=4.14.3.0,
        parsec ^>=3.1.14.0,
        extra ^>=1.7.9,
        containers ^>=0.6.5.1,
        MemoTrie ^>=0.6.10,
        vector ^>=0.12.3.1

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-aoc21
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:
        base ^>=4.14.3.0,
        parsec ^>=3.1.14.0,
        aoc21,
        tasty,
        tasty-hspec,
        hspec
